--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv=“refresh” content=“0; url=recipe.html” /> 
-    <title>Document</title>
+    <title>Redirecting</title>
 </head>
 <body>
-    
+    <p>If you are not redirected, <a href="recipe.html">click here</a>.</p>
 </body>
 </html>
